--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "names_and_ranks = [city_indices +\".\"+\" \"+ city_name] \n",
     "for \n",
-    "    print\n",
+    "    print [city_indices +\".\"+\" \"+ city_name]\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
