Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = [city_indices +\".\"+\" \"+ city_name] \n",
+    "names_and_ranks = [\"city_indices +1\" +\".\"+\" \"+ city_name] \n",
     "for \n",
     "    print(city_indices +\".\"+\" \"+ city_name)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
