--- a/index.ipynb
+++ b/index.ipynb
@@ -210,13 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-1ced99f78508>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-1ced99f78508>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = [\"city_indices +1\" +\".\"+\" \"+ city_name] \n",
     "for \n",
-    "    print(city_indices _ +\".\"+\" \"+ city_name)\n",
+    "    print(city_indices + 1\"\" +\".\"+\" \"+ city_name)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
