--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "names_and_ranks = [\"city_indices +1\" +\".\"+\" \"+ city_name] \n",
     "for \n",
-    "    print(city_indices + 1\"\" +\".\"+\" \"+ city_name)\n",
+    "    print(\"city_indices + 1\" +\".\"+\" \"+ city_name)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
