--- a/index.ipynb
+++ b/index.ipynb
@@ -223,8 +223,7 @@
     }
    ],
    "source": [
-    "\n",
-    "for \n",
+    "for names_and_ranks\n",
     "    print(\"city_indices + 1\" +\".\"+\" \"+ city_name)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
