--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    ],
    "source": [
     "names_and_ranks = \n",
-    "for names in names_and_ranks\n",
+    "for rankings in names_and_ranks\n",
     "    print(\"city_indices + 1\" +\".\"+\" \"+ city_name)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
