--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = \n",
+    "names_and_ranks = \"city_\"\n",
     "for rankings in names_and_ranks\n",
     "    print(\"city_indices + 1\" +\".\"+\" \"+ city_name)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
