--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "\n",
+    "names_and_ranking\n",
     "for rankings in cities\n",
     "    print(\"city_indices + 1\" +\".\"+\" \"+ city_name)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
