--- a/index.ipynb
+++ b/index.ipynb
@@ -223,9 +223,9 @@
     }
    ],
    "source": [
-    "names_and_rankings = \"city_indices + 1\" + \".\" + city_name\n",
+    "names_and_rankings = \"city_indices + 1\" + \".\" + \" \" + city_name\n",
     "for rankings in names_and_ranks\n",
-    "    print(\"city_indices + 1\" +\".\"+\" \"+ city_name)\n",
+    "    print(names_and_ranking)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
