Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -210,22 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-16-8200d4f0a407>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-14-22d741efb9be>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-8200d4f0a407>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for rankings in names_and_rankings\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-22d741efb9be>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for rankings in names_and_ranks\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "names_and_rankings = \"city_indices + 1\" + \".\" + \" \" + city_name\n",
-    "for rankings in cities\n",
-    "    print(names_and_rankings)\n",
+    "for rankings in names_and_ranks\n",
+    "    print(names_and_ranking)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
