--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -210,21 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-23-d9f3ef0232a6>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-22-cdc771e0fef1>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-d9f3ef0232a6>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for city in city_names\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-cdc771e0fef1>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for city in cities_names\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "names_and_rankings = \"city_indices + 1\" + \".\" + \" \" + city_name\n",
-    "for city in city_names:\n",
+    "for city in cities_names\n",
     "    print(names_and_rankings)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
