Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -226,7 +226,7 @@
     }
    ],
    "source": [
-    "names_and_rankings = (city_index = [])\n",
+    "names_and_rankings = \"city_indices + 1\" + \".\" + \" \" + city_name\n",
     "for city in city_names:\n",
     "    print(names_and_rankings)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
