Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,8 +227,8 @@
    ],
    "source": [
     "names_and_rankings = (city_index = [], city_name)\n",
-    "for city in city_names:\n",
-    "    print(names_and_rankings)\n",
+    "for city in names_rankings:\n",
+    "    print(\"city_index\")\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
