--- a/index.ipynb
+++ b/index.ipynb
@@ -226,9 +226,9 @@
     }
    ],
    "source": [
-    "names_and_rankings = (city_index = [], city_name)\n",
+    "names_and_rankings = (city_index  [0], city_name)\n",
     "for city in names_rankings:\n",
-    "    print(\"city_index\")\n",
+    "    print(\"city_index + 1\")\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
