--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     }
    ],
    "source": [
-    "names_and_rankings = (city_index = , city_name)\n",
+    "names_and_rankings = (city_index = (1,2,3,4,5,6,7,8, city_name)\n",
     "for city in names_rankings:\n",
     "    print(\"city_index + 1\")\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
