--- a/index.ipynb
+++ b/index.ipynb
@@ -183,9 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_names = ['Buenos Aires',\n",
     " 'Toronto',\n",
@@ -198,7 +209,8 @@
     " 'Walla Walla Valley',\n",
     " 'Salina Island',\n",
     " 'Solta',\n",
-    " 'Iguazu Falls']"
+    " 'Iguazu Falls']\n",
+    "len(city_names)"
    ]
   },
   {
@@ -226,7 +238,7 @@
     }
    ],
    "source": [
-    "names_and_rankings = (city_index = (1,2,3,4,5,6,7,8, city_name)\n",
+    "names_and_rankings = (city_index = (1,2,3,4,5,6,7,8,, city_name)\n",
     "for city in names_rankings:\n",
     "    print(\"city_index + 1\")\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
