--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
     }
    ],
    "source": [
-    "names_and_rankings = (city_index = (1,2,3,4,5,6,7,8,9,10,11,12), city_name)\n",
+    "names_and_rankings = (city_index = (0:), city_name)\n",
     "for city in names_rankings:\n",
     "    print(\"city_index + 1\")\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
