Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,20 +222,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-26-be2c5395cd44>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-27-46034ea747cc>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-be2c5395cd44>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_rankings = (city_index = (0:12), city_name)\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-46034ea747cc>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_rankings = (city_index (0:12), city_name)\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "names_and_rankings = (city_index = (0:12), city_name)\n",
+    "names_and_rankings = (city_index (012), city_name)\n",
     "for city in names_rankings:\n",
     "    print(\"city_index + 1\" + \".\" + \" \" + city_name)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
