--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
     }
    ],
    "source": [
-    "names_and_rankings = [city_indices (0,12), city_name]\n",
+    "names_and_rankings = [city_indices range(0,11), city_name]\n",
     "for city in names_and_rankings:\n",
     "    print(\"city_indices + 1\" + \".\" + \" \" + city_name)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
