Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,8 +238,8 @@
     }
    ],
    "source": [
-    "names_and_rankings = [city_indices(range(0,11)), city_name]\n",
-    "for city in names_and_rankings:\n",
+    "names_and_rankings = []\n",
+    "for inde in names_and_rankings:\n",
     "    print(\"city_indices + 1\" + \".\" + \" \" + city_name)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
