--- a/index.ipynb
+++ b/index.ipynb
@@ -239,8 +239,8 @@
    ],
    "source": [
     "names_and_rankings = []\n",
-    "for inde in names_and_rankings:\n",
-    "    print(\"city_indices + 1\" + \".\" + \" \" + city_name)\n",
+    "for index in city_indices:\n",
+    "    print(\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
