Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
    "source": [
     "names_and_rankings = []\n",
     "for index in city_indices:\n",
-    "    print(\n",
+    "    names_\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
