--- a/index.ipynb
+++ b/index.ipynb
@@ -276,7 +276,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []\n"
+    "city_populations = []\n",
+    "for index in cities\n",
+    "    "
    ]
   },
   {
