--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -278,7 +278,7 @@
    "source": [
     "city_populations = []\n",
     "for index in cities\n",
-    "    print(f\"{})"
+    "    print(f\"{\\}\")"
    ]
   },
   {
