--- a/index.ipynb
+++ b/index.ipynb
@@ -276,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []\n",
+    "city_populations = [y_values]\n",
     "for index in cities\n",
     "    print(cities)"
    ]
