--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,7 @@
    "source": [
     "city_populations = [y_values]\n",
     "for index in cities\n",
-    "    print(\"city_p\")"
+    "    print(city)"
    ]
   },
   {
