--- a/index.ipynb
+++ b/index.ipynb
@@ -285,9 +285,9 @@
     }
    ],
    "source": [
-    "city_populations = [y_values]\n",
-    "for index in cities\n",
-    "    (f\"{city_names[index]}: {city_populations[index]}\")"
+    "city_populations = []\n",
+    "for city in cities\n",
+    "    "
    ]
   },
   {
