Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities\n",
-    "    city_population.append"
+    "    city_population.append(city['popilation])"
    ]
   },
   {
