Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,22 +272,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-45-04661d993b4e>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-04661d993b4e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for city in cities\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0]\n"
      ]
     }
    ],
    "source": [
     "city_populations = []\n",
-    "for city in cities\n",
-    "    city_population.append(city['Population'])\n",
+    "for city in cities:\n",
+    "    city_populations.append(city['Population'])\n",
     "    \n",
     "print(city_populations)"
    ]
