--- a/index.ipynb
+++ b/index.ipynb
@@ -433,7 +433,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for city in cities:\n",
+    "    cit"
    ]
   },
   {
